maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value keepWallOnLeft
    keepWallOnLeft()
    ^